Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.12 (unreleased)

    Bugs fixed

      - Updated 'pytz' external to point to '2010b' version (not via Zope3).

      - Protect ZCTextIndex's clear method against storing Acquisition wrappers.

      - LP #195761: fixed ZMI XML export / import and restored it to the UI.

  Zope 2.10.11 (2010/01/12)

    Bugs fixed

      - LP #491224: proper escaping of rendered error message

      - Also look for ZEXP imports within the clienthome directory. This
        provides a place to put imports that won't be clobbered by buildout
        in a buildout-based Zope instance.

      - LP #143444: add labels to checkboxes / radio buttons on
        import / export form.

      - fixed improper usage of the IF_MODIFIED_SINCE header inside
        Five/browser/resource.py (updated to Five 1.5.9)


  Zope 2.10.10 (2009/12/22)

    Features added

      - Testing/custom_zodb.py: added support use a different storage other
        than DemoStorage. A dedicated FileStorage can be mount by setting the
        $TEST_FILESTORAGE environment variable to a custom Data.fs file.  A 
        ZEO server can be configured using the $TEST_ZEO_HOST and 
        $TEST_ZEO_PORT environment variables. This new functionality allows us
        to use the standard Zope testrunner for writing and running tests
        against existing Zope installations.

    Bugs fixed

      - LP #490514:  preserve tainting when calling into DTML from ZPT.

      - LP #360761 (backported from Acquisition trunk): fix iteration proxy
        to pass `self` acquisition-wrapped into `__iter__` and `__getitem__`.

      - LP #414757 (backported from Zope trunk): don't emit a IEndRequestEvent
        when clearing a cloned request.

  Zope 2.10.9 (2009/08/06)

    Restructuring
